--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,9 @@
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
+    font-family:  Roboto
   }
+ 
 
   header {
     background-color: #333;
@@ -11,14 +13,20 @@
     padding: 10px 0;
     text-align: center;
   }
+  .active {
+    background-color: #04AA6D;
+  }
+
 
   nav ul {
+
     list-style-type: none;
     margin: 0;
     padding: 0;
   }
 
   nav ul li {
+ 
     display: inline;
     margin-right: 20px;
   }
