--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,9 @@
   /* CSS for navbar */
   body {
-    font-family: Arial, sans-serif;
+    font-family: Roboto;
     margin: 0;
     padding: 0;
-    font-family:  Roboto
+  
   }
  
 
